--- a/src/Makefile
+++ b/src/Makefile
@@ -18,54 +18,21 @@ $(TARGET): $(OBJS)
 $(OBJS): %.o:%.c $(SRC) $(INC)
 	$(CC) $(CFLAGS) -o $@ -c $< $(ASAN)
 
-# TESTS & COVERAGE
-GCOV_FLAGS:=-fprofile-arcs -ftest-coverage $(ASAN)
-TEST_LIBS:=$(shell pkg-config --cflags --libs check) 
+test:
+	$(MAKE) -f test.mk
 
-TARGET_TEST=test
-TARGET_TEST_LIB=s21_matrix_test.a
-TEST_DIR=./tests
-
-TEST_INC:=$(shell find $(TEST_DIR) -name "*.h")
-TEST_SRC:=$(shell find $(TEST_DIR) -name "*.c")
-
-TEST_OBJS:=$(TEST_SRC:%.c=%.o)
-
-# GENERATE TEST.EXE FOR GCOV
-$(TARGET_TEST): CFLAGS+=$(GCOV_FLAGS)
-$(TARGET_TEST): $(TEST_OBJS) $(TARGET_TEST_LIB)
-	$(CC) $(CFLAGS) main.c -o $@ $^ $(TEST_LIBS) 
-	./test
-	
-# GET ALL OBJS FROM TEST_DIR
-$(TEST_OBJS): $(TEST_DIR)%.o:$(TEST_DIR)%.c $(TEST_INC) main.c
-	$(CC) -o $@ -c $<
-
-# BUILD THE LIB AGAIN FOR TESTS
-$(TARGET_TEST_LIB): $(OBJS) $(INC)
-	ar rc $(TARGET_TEST_LIB) $(OBJS)
-	ranlib $(TARGET_TEST_LIB)
-
-# OBJS FOR LIB AGAIN
-
-gcov: $(TARGET_TEST)
-	gcov $(TEST_SRC) $(SRC)
-
-coverage.info: gcov
-	lcov --capture --directory . --output-file coverage.info
-
-report: coverage.info
-	genhtml coverage.info --output-directory coverage
+report:
+	$(MAKE) -f test.mk report
 
 open:
-	open coverage/index.html
+	$(MAKE) -f test.mk open
 
 clean:
-	rm -rf $(TEST_DIR)/*.gcno $(TEST_DIR)/*.gcda $(TEST_DIR)/*.o *.gcno *.gcda *.o coverag* *.gcov test.dSYM
+	rm -rf $(OBJS)  
 
 fclean: clean
-	rm -rf $(TARGET) $(TARGET_TEST_LIB) $(TARGET_TEST)
+	rm -rf $(TARGET)
+	$(MAKE) -f test.mk fclean
 
-re: fclean test
 
 .PHONY: all clean fclean open
